Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-124650

Missing BLE 5.x Extended Advertisements for Windows

    XMLWordPrintable

Details

    • Windows
    • 3
    • 28127f4e2 (dev), c5174e47f (6.8), 2081b4ae2 (6.7), bd40cef1c (tqtc/lts-6.5)
    • Foundation Sprint 109

    Description

      I am working on a project where I listen for Extended Advertisement packets over Bluetooth LE 5.0, and in the QtConnectivity-module it works on Linux, but not on Windows...

      So I took the liberty of debugging the issue myself and found the missing "line" in the QtConnectivity-code on github. Compiled and tested it, and it now works for me. 

      Added this line directly under line 118 in the file "qbluetoothdevicediscoveryagent_winrt.cpp"

      m_watcher.AllowExtendedAdvertisements(true);

       

      There are some BLE 5.x dongles that support Extended Advertisement packets in hardware, but lack driver-implementation of this feature on the Windows driver. Like the ASUS BT500 that works on Linux, but not on Windows.

      My other Intel Wireless Bluetooth device works on both Windows and Linux though! (After this patch)

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            ivan.solovev Ivan Solovev
            larsdev Lars Aksel Tveråmo
            Vladimir Minenko Vladimir Minenko
            Alex Blasche Alex Blasche
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes