Windows BTLE: support extended advertisements when scanning

Verified that it works using nRF Connect to generate the
BTLE 5 Extended Advertising packages.
Also verified that the legacy advertising keeps working.

Fixes: QTBUG-124650
Pick-to: 6.7 6.5
Change-Id: Id32e262973f85dc3c07b2c4afbcb3777a4d75e4b
Reviewed-by: Juha Vuolle <juha.vuolle@qt.io>
(cherry picked from commit 28127f4e261bcd63475ba20eead7ef466c683603)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>